[package]
name = "pwal"
version = "0.1.0"
edition = "2024"
description = "Partitioned Write-Ahead Log (WAL)"
license = "MIT OR Apache-2.0"
keywords = ["distributed", "database", "wal", "storage", "rust"]
repository = "https://github.com/markosski/pwal"
authors = ["Marcin <markosski@users.noreply.github.com>"] # Taking from repo path or typical usernames

[dependencies]
tokio = { version = "1.48.0", features = ["fs", "io-util", "sync", "time", "macros", "rt"] }
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
