[package]
name = "pwal"
version = "0.1.0"
edition = "2021"
description = "Partitioned Write-Ahead Log (WAL)"
license = "Apache-2.0"
keywords = ["distributed", "database", "wal", "storage", "rust"]
repository = "https://github.com/markosski/pwal"
authors = ["Marcin <markosski@users.noreply.github.com>"] # Taking from repo path or typical usernames

categories = ["database-implementations", "filesystem"]

[dependencies]
tokio = { version = "1.48.0", features = ["fs", "io-util", "sync", "time", "macros", "rt", "rt-multi-thread"] }
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"

[[bench]]
name = "wal_bench"
harness = false
